--- a/index.html
+++ b/index.html
@@ -68,13 +68,13 @@
         <div class="product">
             <img src="fotoğrafmakinesi.png" alt="Fotoğraf Makinesi">
             <h2>Fotoğraf Makinesi</h2>
-            <p>Fiyat:59.999₺</p>
+            <p>Fiyat:59999₺</p>
             <button class="add-to-cart">Sepete Ekle</button>
         </div>
         <div class="product">
             <img src="piyano.png" alt="Piyano">
             <h2>Piyano</h2>
-            <p>Fiyat:11.999999₺</p>
+            <p>Fiyat:11999999₺</p>
             <button class="add-to-cart">Sepete Ekle</button>
         </div>
     </section>
